--- a/contato.html
+++ b/contato.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+<link rel="stylesheet" href="assets/css/style.css">
 
 <head>
     <meta charset="UTF-8">
@@ -13,76 +14,77 @@
     <!-- Menu da página -->
     <nav>
         <!-- Logo + texto á esquerda do menu -->
-        <div>
-            <img src="assets/images/goku_ico.png" alt="Logo da página - Goku">
-            <span>Gabriel Machado</span>
+        <div class="logo">
+            <img class="icone" src="assets/images/goku_ico.png" alt="Logo da página - Gabriel">
+            <span class="titulo">Gabriel Machado</span>
         </div>
         <!-- Opções do menu em tópicos -->
         <ul>
-      
-        <a href="contato.html">  
-        <li>Contatos</li>
-        </a> 
+            <a href="index.html" target="blank">
+                <li>Home</li>
+            </a>
+            <a href="contato.html">
+                <li>Contatos</li>
+            </a>
         </ul>
     </nav>
+    <main class="contato">
+        <section class="formulario">
+            <form>
+                <h3>Contato</h3>
+                <div class="campos-form">
+                    <label for="nome">Nome:</label>
+                    <input id="nome" type="text" placeholder="Insira o seu nome completo">
+                    <div id="txtNome"></div>
+                </div>
+                <divclass="campos-form">
+                    <label for="email">E-mail:</label>
+                    <input id="email" type="text" placeholder="Insira o seu e-mail">
+                    <div id="txtEmail"></div>
+                    </div>
+                    <div class="campos-form">
+                        <label for="mensagem">Mensagem:</label>
+                        <textarea id="mensagem" type="text" rows="8" placeholder="Deixe sua mensagem..."></textarea>
+                        <div id="txtMensagem"></div>
+                    </div>
+                    <button ype="button">
+                        Enviar
+                    </button>
+            </form>
+        </section>
 
-
-    <!-- Conteúdo da página -->
-    <main>
-        <section>
-        <form>
-            <h2>Contatos</h2>
-            <div>
-                <label for="nome">Nome:</label>
-                <input id="nome" type="text" placeholder="Insira o seu nome completo">
-                <div id="txtNome"></div>
-            </div>
-            <div>
-                <label for="email">E-mail:</label>
-                <input id="email" type="text" placeholder="Insira o seu e-mail">
-                <div id="txtEmail"></div>
-            </div>
-            <div>
-                <label for="mensagem">Mensagem:</label>
-                <textarea id="mensagem" type="text" rows="8" placeholder="Insira sua mensagem"> </textarea>
-                <div id="txtMensagem"></div> 
-            </div>
-            <button ype="button">
-                Enviar
-            </button>
-        </form>
-    </section>
-
-            <h2>Consultar CEP</h2>
-            <div>
-                <label for="cep">CEP:</label>
-                <input id="cep" type="text" placeholder="Digite o número do CEP">
-                <div id="txtCep"></div>
-            </div>
-            <button ype="button">
-                Consultar
-            </button>
-            <hr>
-            <label for="endereco">Endereço:</label>
-                <textarea id="endereco" type="text"  placeholder="Busca CEP"> </textarea>
-                <div id="txtEndereco"></div>
+        <h3>Consultar CEP</h3>
+        <div class="endereco">
+            <div class="campos-form">
+            <label for="cep">CEP:</label>
+            <input id="cep" type="text" placeholder="Digite o número do CEP">
+            <div id="txtCep"></div>
+        </div>
+        <button ype="button">
+            Consultar
+        </button>
+        <hr>
+        <div class="endereco">
+        <label for="endereco">Endereço:</label>
+        <textarea id="endereco" type="text" placeholder="Busca CEP"></textarea>
+        <div id="txtEndereco"></div>
     </main>
 
 
     <!-- Rodapé da página -->
     <footer>
-        <div>
+        <div class="rodape">
             <a href="https://www.linkedin.com/in/gabriel-machado-s/" taget="_blank">
-                <img src="assets/images/linkedin.png" alt="Linkedin">
+                <img class="redes" src="assets/images/linkedin.png" alt="Linkedin">
             </a>
-            <a href="https://github.com/GabriMachado" taget="_blank"> 
-            <img src="assets/images/github.png" alt="Githb">
+            <a href="https://github.com/GabriMachado" taget="_blank">
+                <img class="redes" src="assets/images/github.png" alt="Githb">
             </a>
             <a href="https://www.instagram.com/gabrri__/" target="_blank">
-            <img src="assets/images/instagram.png" alt="Instagram">
-        </a>
+                <img class="redes" src="assets/images/instagram.png" alt="Instagram">
+            </a>
         </div>
-        <p>Desenvolvido por Gabriel Machado - 2023 &copy;</p>
+        <p class="by">Desenvolvido por Gabriel Machado - 2023 &copy;</p>
 
     </footer>
 
