--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="assets/images/goku_ico.png">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Portfólio Gabriel Machado</title>
 </head>
 
@@ -13,42 +14,47 @@
     <!-- Menu da página -->
     <nav>
         <!-- Logo + texto á esquerda do menu -->
-        <div>
-            <img src="assets/images/goku_ico.png" alt="Logo da página - Gabriel">
-            <span>Gabriel Machado</span>
+        <div class="logo">
+            <img class="icone" src="assets/images/goku_ico.png" alt="Logo da página - Gabriel">
+            <span class="titulo">Gabriel Machado</span>
         </div>
         <!-- Opções do menu em tópicos -->
         <ul>
-            <li>Home</li>
+            <a href="#home">
+                <li>Home</li>
+            </a>
             <a href="#perfil">
-            <li>Sobre</li>
-        </a>
-    
+                <li>Sobre</li>
+            </a>
+
             <a href="#video">
-            <li>Vídeo</li>
-        </a>
-        <a href="contato.html">  
-        <li>Contatos</li>
-        </a> 
+                <li>Vídeo</li>
+            </a>
+            <a href="contato.html">
+                <li>Contatos</li>
+            </a>
         </ul>
     </nav>
 
 
     <!-- Conteúdo da página -->
     <main>
-        <h1 id="perfil">Sobre o Gabriel:</h1>
-        <section>
+        <h1 id="perfil">Sobre mim:</h1>
+        <section id="sobre">
             <div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam veniam nemo voluptas numquam ipsa
-                    doloribus atque dicta dolore suscipit minima maiores, mollitia pariatur asperiores soluta
-                    reprehenderit ex omnis excepturi quibusdam?</p>
+                <p>Olá!
+                    Me chamo Gabriel Machado, tenho 23 anos e atualmente moro em Caçapava, interior de SP.</p>
+                <p>Sou experiente em implementação de provedores, estruturação de novas células, documentação de processos operacionais e 
+                    analises em massa. Tenho conhecimento e experiência na área de Risco e Fraude, PLD-FT e outros produtos financeiros.
+                     Atualmente estou passando por uma transição de carreira, onde vou seguir desenvolvendo conhecimentos 
+                     técnicos e aprimorando habilidades comportamentais.</p>
             </div>
-            <img src="assets/images/goku.jpg" alt="Oi, eu sou Gabriel">
+            <img class="foto" src="assets/images/EU.jpg" alt="Oi, eu sou Gabriel">
         </section>
         <h1 id="video">Vídeo:</h1>
         <section>
             <h2>Vídeo do Momento</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/EzN5SW2QOWY"
+            <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/EzN5SW2QOWY"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
@@ -58,18 +64,18 @@
 
     <!-- Rodapé da página -->
     <footer>
-        <div>
+        <div class="rodape">
             <a href="https://www.linkedin.com/in/gabriel-machado-s/" taget="_blank">
-                <img src="assets/images/linkedin.png" alt="Linkedin">
+                <img class="redes" src="assets/images/linkedin.png" alt="Linkedin">
             </a>
-            <a href="https://github.com/GabriMachado" taget="_blank"> 
-            <img src="assets/images/github.png" alt="Githb">
+            <a href="https://github.com/GabriMachado" taget="_blank">
+                <img class="redes" src="assets/images/github.png" alt="Githb">
             </a>
             <a href="https://www.instagram.com/gabrri__/" target="_blank">
-            <img src="assets/images/instagram.png" alt="Instagram">
-        </a>
+                <img class="redes" src="assets/images/instagram.png" alt="Instagram">
+            </a>
         </div>
-        <p>Desenvolvido por Gabriel Machado - 2023 &copy;</p>
+        <p class="by">Desenvolvido por Gabriel Machado - 2023 &copy;</p>
 
     </footer>
 
